Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
     <!-- Header with Profile Photo -->
     <header>
-        <img src="/Mee.png" alt="Profile Photo">
+        <img src="Mee.png" alt="Profile Photo">
         <h1>My Resume</h1>
         <nav>
             <a href="index.html">Home</a> | 
-            <a href="/hobbies.html">Hobbies</a> | 
-            <a href="/contact.html">Contact</a>
+            <a href="hobbies.html">Hobbies</a> | 
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
@@ -103,4 +103,5 @@
     </footer>
 
 </body>
+
 </html>
