Fix profile photo filename in index.html
Updated profile photo filename from 'Mee.png' to 'MEE.png'.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Header with Profile Photo -->
     <header>
-        <img src="Mee.png" alt="Profile Photo">
+        <img src="MEE.png" alt="Profile Photo">
         <h1>My Resume</h1>
         <nav>
             <a href="index.html">Home</a> | 
@@ -105,3 +105,4 @@
 </body>
 
 </html>
+
